--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hu-More-Bot</title>
   </head>
-  <body style="background-color: var(--color-surface-500)">
+  <body style="background-color: var(--color-surface-500); overflow: hidden;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
